changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

plugins/cfpython/include/cfpython.h, plugins/cfpython/cfpython.c:
  To make porting to Python 3 in the future easier, enable the forward
  compatibility warning flag if crossfire is compiled against Python 2.6, this
  will result in warnings to stderr about "DeprecationWarning" if incompatible
  code is found. Several issues has already been fixed recently (thanks to
  having this enabled locally). Compiling Crossfire against Python 2.5 or older
  still works (of course). Also add a missing include causing warnings under
  Python 2.6.
Arvid Norlander 2009-02-03

common/shstr.c: Use the correct return type from hashstr() current code assumed
  sizeof(int) == sizeof(long) == sizeof(void*) which is incorrect for many
  systems (such as x86_64). There was another potential (as in: would not happen
  with current hash table size) issue in the same code with mixing signed and
  unsigned. Also fixed.
Arvid Norlander 2009-02-03

server/plugins.c: Fix possible buffer overflow when initializing plugins.
Andreas Kirschbaum 2009-02-03

doc/Developers/smooth.pdf, doc/Developers/img/sgrass.base.111.eps,
  doc/Developers/img/smoothlevel.eps, doc/Developers/img/canvas_smooth.eps,
  doc/Developers/smooth.tex: smooth.pdf was broken (due to someone using
  svn:eol-style on it [as far as I can tell], pdf are binary files and shouldn't
  be mangled like that!). Also the pdf couldn't be re-generated from smooth.tex
  since some of the image files were missing. (They were erroneously removed in
  revision 3560). Add the three *.eps needed back. Then regenerate the pdf.